<resources>
    <string name="app_name">Mymap</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="setting_register">登陆/注册</string>
    <string name="today_temperature">室外温度:</string>
    <string name="today_PM">PM值:</string>
    <string name="integral">积分商城</string>
    <string name="my_footmark">我的足迹</string>
    <string name="download_offline">离线包下载</string>
    <string name="collect">收藏</string>
    <string name="normal_address">常用地址</string>
    <string name="orders">订单</string>
    <string name="contribute">贡献值</string>
    <string name="money">财富</string>
    <string name="my_nonstop_number">我的直达号</string>
    <string name="distance">测距</string>
    <string name="radar">身边雷达</string>
    <string name="activity_area">活动专区</string>
    <string name="help_feedback">帮助与反馈</string>
    <string name="setting">设置</string>
    <string name="out_baidumap">退出我的地图</string>
    <string name="set_screenlight">屏幕亮度</string>
    <string name="set_isshowimage">2G/3G网络下显示图片</string>
    <string name="set_messageshow">消息通知</string>
    <string name="set_issurffaceon">旋转手势开关</string>
    <string name="set_autoupdate_wifi">WiFi下自动更新</string>
    <string name="set_search_sound">"摇一摇"语音查询</string>
    <string name="set_auto_routestate">行车时自动播报路况</string>
    <string name="set_navigation">导航设置</string>
    <string name="set_addradar">添加身边雷达快捷入口</string>
    <string name="set_resetmap">重置地图</string>
    <string name="set_aboart">关于</string>
    <string name="set_newfunction">新功能介绍</string>
    <string name="set_apply">应用推荐</string>
    <string name="navagation_switch_day_night">日夜模式切换</string>
    <string name="set_SearchbySound">"摇一摇"语音查询</string>
    <string name="set_AutoplayRouteState">行车时自动播报路况</string>
    <string name="set_switchVisualAngle">切换视角开关</string>
    <string name="navagation_savingpower">省电模式切换</string>
    <string name="navagation_retrivel_mode">检索路线联网模式</string>
    <string name="navagation_brocast_mode">导航播报模式</string>
    <string name="navagation_brocast_fuzhu">辅助播报信息</string>
    <string name="navagation_update_offline_package">自动更新离线导航包</string>
    <string name="navagation_keep_screenlight">导航中保持屏幕亮度</string>
    <string name="navagation_address_parking">目的地停车场接送</string>
    <string name="navagation_start_walking">导航结束发起步行导航</string>
    <string name="navagation_show_routelan">显示全程路况条</string>
    <string name="navagation_manage">躲避点管理</string>
    <string name="navagation_auto">自动</string>
    <string name="navagation_day_mode">白天模式</string>
    <string name="navagation_night_mode">夜间模式</string>
    <string name="navagation_start">开启</string>
    <string name="navagation_close">关闭</string>
    <string name="navagation_offline_priority">离线优先</string>
    <string name="navagation_online_priority">在线优先</string>
    <string name="navagation_detail">详细</string>
    <string name="navagation_concise">简洁</string>
    <string name="navagation_mute">静音</string>
    <string name="speedlimit">限速提醒</string>
    <string name="drive_safe">安全驾驶</string>
    <string name="ahead_routestate">前方路况</string>
    <string name="notification_straight_line">直行顺行提醒</string>
    <string name="wifi_auto_updateofflinepackage">在WIFI环境下自动更新离线导航包</string>
    <string name="manage_escape_point">管理已有的躲避点或添加新的躲避点</string>
    <string name="nearby_hint">在我的位置附近搜索</string>
    <string name="rountplay_bus">公交</string>
    <string name="rountplay_driving">自驾</string>
    <string name="rountplay_walking">步行</string>
    <string name="rountplay_bycycke">自行车</string>
    <string name="detail">详情</string>
    <string name="yongche">用车</string>
    <string name="genwozou">跟我走</string>
<array name="day_or_night">
    <item>自动</item>
    <item>白天模式</item>
    <item>夜间模式</item>
</array>


    <array name="saving_power">
        <item>自动</item>
        <item>开启</item>
        <item>关闭</item>
    </array>

    <array name="search_route">
        <item>离线优先</item>
        <item>在线优先</item>

    </array>

    <array name="brodcast_mode">
        <item>详情</item>
        <item>简洁</item>
        <item>静音</item>
    </array>

    <string name="menu_beautiful_fruit">找美食</string>
    <string name="menu_book_hotel">订酒店</string>
    <string name="menu_go_where">周末去哪儿</string>
    <string name="menu_search_scene">搜景点</string>
    <string name="menu_search_group">查团购</string>
    <string name="menu_search_bus">用车</string>
    <string name="menu_see_movie">看电影</string>
    <string name="menu_search_takeaway">叫外卖</string>


    <string name="str_nearby_seacch">周边快查</string>
    <string name="str_more">更多</string>
    <string name="str_go_outside">[出行]</string>
    <string name="str_busstation">公交站</string>
    <string name="str_subway">地铁图</string>
    <string name="str_fillingstation">加油站</string>
    <string name="str_life">[生活]</string>
    <string name="str_bank">银行</string>
    <string name="str_supermarket">超市</string>
    <string name="str_toilet">厕所</string>
    <string name="str_leisure_time">[休闲]</string>
    <string name="str_internet_cafe">网吧</string>
    <string name="str_ktv">KTV</string>
    <string name="str_bath">洗浴</string>
    <string name="str_intersted_address">你可能感兴趣的地方</string>
    <string name="str_all">全部</string>
    <string name="str_beautiful_fruit">美食</string>
    <string name="str_entertainment">休闲娱乐</string>
    <string name="str_hotel">酒店</string>
    <string name="str_avagperson">人均</string>
    <string name="str_oldprice">原价</string>
    <string name="str_currentprice">现价</string>
    <string name="str_sales">销量</string>
</resources>
